@@ -13,6 +13,8 @@ package org.eclipse.cdt.debug.mi.core.command.factories.win32;
 import org.eclipse.cdt.debug.mi.core.command.CLIInfoSharedLibrary;
 import org.eclipse.cdt.debug.mi.core.command.MIEnvironmentCD;
 import org.eclipse.cdt.debug.mi.core.command.MIGDBSetAutoSolib;
+import org.eclipse.cdt.debug.mi.core.command.MIGDBSetSolibSearchPath;
+import org.eclipse.cdt.debug.mi.core.command.MIGDBShowSolibSearchPath;
 import org.eclipse.cdt.debug.mi.core.command.factories.StandardCommandFactory;
  
 /**
@@ -54,6 +56,66 @@ public class StandardWinCommandFactory extends StandardCommandFactory {
 	public MIGDBSetAutoSolib createMIGDBSetAutoSolib( boolean set ) {
 		// Suppress "set auto-solib" - returns error on Windows
 		return new MIGDBSetAutoSolib( getMIVersion(), true ) {
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getOperation()
+			 */
+			public String getOperation() {
+				return ""; //$NON-NLS-1$
+			}
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getOptions()
+			 */
+			public String[] getOptions() {
+				return new String[0];
+			}
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getParameters()
+			 */
+			public String[] getParameters() {
+				return new String[0];
+			}			
+		};
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.mi.core.command.CommandFactory#createMIGDBShowSolibSearchPath()
+	 */
+	public MIGDBShowSolibSearchPath createMIGDBShowSolibSearchPath() {
+		// Suppress "show solib-search-path" - returns error on Windows
+		return new MIGDBShowSolibSearchPath( getMIVersion() ) {
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getOperation()
+			 */
+			public String getOperation() {
+				return ""; //$NON-NLS-1$
+			}
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getOptions()
+			 */
+			public String[] getOptions() {
+				return new String[0];
+			}
+
+			/* (non-Javadoc)
+			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getParameters()
+			 */
+			public String[] getParameters() {
+				return new String[0];
+			}			
+		};
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.mi.core.command.CommandFactory#createMIGDBSetSolibSearchPath(java.lang.String[])
+	 */
+	public MIGDBSetSolibSearchPath createMIGDBSetSolibSearchPath( String[] params ) {
+		// Suppress "set solib-search-path" - returns error on Windows
+		return new MIGDBSetSolibSearchPath( getMIVersion(), params ) {
 
 			/* (non-Javadoc)
 			 * @see org.eclipse.cdt.debug.mi.core.command.MICommand#getOperation()
